full OIDC authentication (very dirty code)
